--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "ebml": "2.2.4",
     "filereader-stream": "^2.0.0",
     "libass-wasm": "https://github.com/Dador/JavascriptSubtitlesOctopus#4.0.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.2",
-    "react-dropzone": "^4.2.13",
-    "react-scripts": "1.1.4",
-    "video.js": "^7.14.3"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-dropzone": "^4.3.0",
+    "react-scripts": "^4.0.3",
+    "video.js": "^7.15.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -18,11 +18,11 @@
     "test": "react-app-rewired test --env=jsdom"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^4.5.2",
-    "husky": "^1.0.0-rc.13",
-    "lint-staged": "^7.2.0",
+    "copy-webpack-plugin": "^6.4.1",
+    "husky": "^4.3.8",
+    "lint-staged": "^11.1.2",
     "prettier": "1.13.7",
-    "react-app-rewired": "^1.5.2"
+    "react-app-rewired": "^2.1.8"
   },
   "husky": {
     "hooks": {
@@ -33,6 +33,18 @@
     "*.{js,json,css,md}": [
       "prettier --write",
       "git add"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
   }
 }
